Added layout to Vets page. Closes #21

--- a/pet-clinic-web/src/main/resources/messages/messages_fr.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages_fr.properties
@@ -7,3 +7,4 @@ duplicateFormSubmission=La double soumission de formulaire n'est pas autoris\u00
 typeMismatch.date=date incorrecte
 typeMismatch.birthDate=date incorrecte
 owners=propriétaire
+vets=vétérinaire
