--- a/pet-clinic-web/src/main/resources/messages/messages.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages.properties
@@ -8,3 +8,4 @@ typeMismatch.date=invalid date
 typeMismatch.birthDate=invalid date
 owners=Owners
 vets=Veterinarians
+notImplemented=Not Implemented Yet!
